--- a/src/style/pages/_about.scss
+++ b/src/style/pages/_about.scss
@@ -1,10 +1,17 @@
 .aboutConfig {
-  padding-top: 50px;
+  padding: 50px 2vw;
 }
 
 //* for tablet :
-@media (min-width: 510px) {
+@media (min-width: 600px) {
   .aboutConfig {
-    padding-top: 0px;
+    padding-top: 0px 4vw;
   }
 }
+
+//* for tablet :
+// @media (min-width: 1100px) {
+//   .aboutConfig {
+//     padding-top: 0px 6vw;
+//   }
+// }
