--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -6,7 +6,7 @@
 
   &__section {
     width: 100%;
-    min-height: 100vh;
+    height: 100svh;
     padding: 50px 7vw;
     display: flex;
     flex-direction: column-reverse;
@@ -220,7 +220,7 @@
 }
 
 //* for tablet :
-@media (min-width: 510px) {
+@media (min-width: 600px) {
   .home {
     margin-left: 20vw;
     &__section {
