--- a/src/style/pages/sections/_sectionSkills.scss
+++ b/src/style/pages/sections/_sectionSkills.scss
@@ -5,46 +5,120 @@
   padding: 1rem;
   margin: 0 auto;
 
-  border: 2px solid rgb(187, 19, 154);
-
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 
   &__firstPart {
-    width: 60%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    border: 1px solid rgb(30, 0, 255);
+    align-items: flex-start;
+    //border: 1px solid rgb(30, 0, 255);
     &--top {
       width: 100%;
-      height: 5vh; //! A changer
+      //height: 5vh; //! A changer
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: space-evenly;
       align-items: flex-start;
-      border: 1px solid rgb(59, 233, 20);
+      //border: 1px solid rgb(59, 233, 20);
     }
     &--bottom {
       width: 100%;
-      height: 5vh; //! A changer
+      //height: 5vh; //! A changer
       display: flex;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-content: space-evenly;
       align-items: flex-start;
-      border: 1px solid rgb(59, 233, 20);
+      //border: 1px solid rgb(59, 233, 20);
+      padding: 3rem 0 2rem 0;
     }
   }
   &__secondPart {
-    width: 40%;
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    //border: 1px solid rgb(255, 13, 0);
+  }
+}
+
+.lignInfo {
+  width: 100%;
+  //min-width: 40vw;
+  display: flex;
+  flex-direction: column;
+  padding: 0.6rem 0;
+  border-bottom: 2px solid $color_header_bg_1_dark;
+
+  & label {
+    width: 100px;
+  }
+  & p {
+    width: 100%;
+    padding-left: 0.5rem;
+  }
+}
+
+.skill {
+  width: 100%;
+  margin-bottom: 0.5rem;
+
+  &__title {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0.7rem 5vw 0.7rem 0;
+    //border: 1px green solid;
+  }
+
+  &__progress {
+    margin: 0 5vw 0 0;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    border: 1px solid rgb(255, 13, 0);
+
+    &--percent {
+      width: 40%;
+      height: 4px;
+      //background: red;
+      border-radius: 2px 0 0 2px;
+    }
+    &--background {
+      width: 60%;
+      height: 4px;
+      background: $color_header_bg_1_dark;
+      border-radius: 0 2px 2px 0;
+    }
+  }
+}
+
+//* for tablet :
+@media (min-width: 600px) {
+  .sectionSkills {
+    &__firstPart {
+      width: 100%;
+      &--top {
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+      }
+      &--bottom {
+        justify-content: space-evenly;
+        align-items: center;
+      }
+    }
+  }
+  .lignInfo {
+    flex-direction: row;
   }
 }
 
@@ -54,13 +128,28 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-  }
-}
 
-//! to delete :
-.component {
-  width: 100%;
-  border: 2px dashed rgb(228, 80, 11);
+    &__firstPart {
+      &--top {
+        width: 100%;
+        justify-content: space-between;
+      }
+      &--bottom {
+        justify-content: space-evenly;
+      }
+    }
+  }
+
+  .lignInfo {
+    flex-direction: row;
+  }
+
+  .skill__title {
+    padding: 0.5rem 5vw;
+  }
+  .skill__progress {
+    margin: 0 5vw;
+  }
 }
 
 // //* Dark/Light Mode
