--- a/src/style/settings/_settings.scss
+++ b/src/style/settings/_settings.scss
@@ -4,8 +4,8 @@
 .params {
   position: fixed;
   width: 40px;
-  height: 200px;
-  top: 50px;
+  height: 150px;
+  bottom: 0px;
   right: 0px;
   display: flex;
   flex-direction: column;
