Add project page and gradient background

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,9 +3,13 @@
 @import "./style/settings/settings";
 @import "./style/settings/fonts";
 @import "./style/layout/header";
+@import "./style/layout/gridManager";
+@import "./style/layout/animatedBackground";
 @import "./style/components/buttons";
 @import "./style/pages/sections/sectionTitle";
 @import "./style/pages/sections/sectionIntro";
 @import "./style/pages/sections/sectionSkills";
+@import "./style/pages/sections/sectionExp";
+@import "./style/pages/sections/sectionAccordion";
 @import "./style/pages/home";
 @import "./style/pages/about";
