--- a/src/style/settings/_reset.scss
+++ b/src/style/settings/_reset.scss
@@ -10,6 +10,7 @@
 img {
   height: auto;
   max-width: 100%;
+  display: block;
 }
 
 // ########### Footer always at the end of the page ####### //
