--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -10,7 +10,7 @@
 
   &:hover {
     cursor: pointer;
-    opacity: 0.8;
+    //opacity: 0.8;
     padding: 0.75rem 1.6rem;
     transition: opacity 0.2s ease-out;
   }
@@ -61,7 +61,7 @@
 
   &:hover {
     cursor: pointer;
-    opacity: 0.8;
+    //opacity: 0.8;
     //padding: 0.75rem 1.6rem;
     transition: opacity 0.2s ease-out;
   }
