--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -2,7 +2,7 @@
 
 .menu {
   position: fixed;
-  width: 20vw;
+  width: 15vw;
   height: 100vh;
   z-index: 99;
 
@@ -85,11 +85,9 @@
   & .menu {
     background: linear-gradient(
       180deg,
-      $color_header_bg_1_light 0%,
-      rgb(241, 239, 239) 20%,
+      rgb(227, 225, 225) 1%,
       $color_header_bg_2_light 50%,
-      rgb(241, 239, 239) 80%,
-      $color_header_bg_1_light 100%
+      rgb(227, 225, 225) 99%
     );
 
     &__icon {
@@ -164,7 +162,7 @@
   container-name: "menu";
 }
 
-@container (max-width: 220px) {
+@container (max-width: 180px) {
   .menu__navigation__list--lign p {
     display: none;
   }
