--- a/src/style/settings/_fonts.scss
+++ b/src/style/settings/_fonts.scss
@@ -50,6 +50,31 @@
     font-weight: 700;
     letter-spacing: 1.5px;
   }
+  &__accordion {
+    font-size: clamp(0.8rem, 11px + 1.5vw, 1.4rem);
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    font-weight: 700;
+    text-shadow: 0 5px 10px rgba(0, 0, 0, 1), 0 5px 15px rgba(0, 0, 0, 1);
+  }
+  &__strongText {
+    text-align: center;
+    font-size: clamp(0.4rem, 10px + 0.3vw, 1.5rem);
+    font-weight: 200;
+    letter-spacing: 0.5px;
+    line-height: calc(14px + 1.2vw);
+  }
+}
+
+@media (min-width: 600px) {
+  .font__accordion {
+    font-size: clamp(0.8rem, 12px + 1.6vw, 1.6rem);
+  }
+  .font__strongText {
+    font-size: clamp(0.5rem, 12px + 0.3vw, 1.5rem);
+    letter-spacing: 1px;
+    line-height: calc(14px + 1.2vw);
+  }
 }
 
 #light .font__color {
