add animated background

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,10 +6,13 @@
 @import "./style/layout/gridManager";
 @import "./style/layout/animatedBackground";
 @import "./style/components/buttons";
+@import "./style/components/contactForm";
 @import "./style/pages/sections/sectionTitle";
 @import "./style/pages/sections/sectionIntro";
 @import "./style/pages/sections/sectionSkills";
 @import "./style/pages/sections/sectionExp";
 @import "./style/pages/sections/sectionAccordion";
+@import "./style/pages/sections/_sectionContact";
+
 @import "./style/pages/home";
 @import "./style/pages/about";
