--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -1,6 +1,6 @@
 .home {
   width: auto;
-
+  overflow: hidden;
   //max-width: 800px;
   //height: 50vh;
 
@@ -30,73 +30,44 @@
       height: auto;
       padding: 2rem;
       position: relative;
-      margin-top: 2rem;
+      //margin-top: 2rem;
     }
   }
 }
 
 .corner {
+  --_sizeCorner: 100px;
   position: absolute;
-  width: 25%;
-  height: 25%;
 
-  &__TopLeft::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 10vw;
-    height: 6px;
-    //for color to change :
-  }
+  width: var(--_sizeCorner);
+  height: var(--_sizeCorner);
+  background: transparent;
 
-  &__TopLeft::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 6px;
-    height: 12vh;
-    //for color to change :
-  }
-
-  &__BottomRight::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 10vw;
-    height: 6px;
-    //for color to change :
-  }
-
-  &__BottomRight::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 6px;
-    height: 12vh;
-    //for color to change :
-  }
+  border-radius: 0.3rem;
 
   &__TopLeft {
-    top: 0;
-    left: 0;
+    bottom: 15px;
+    left: -30px;
+    box-shadow: 0 0 12px 0 $colorTheme_green;
+    border: 4px solid $colorTheme_green;
+    opacity: 0.5;
   }
   &__BottomRight {
-    bottom: 0;
-    right: 0;
+    bottom: -20px;
+    left: 10px;
+    border: 2.5px solid $colorTheme_green;
   }
 }
 
 .picture__container {
+  position: relative;
   display: block;
   width: 150px;
   min-width: 200px;
   height: 230px;
   overflow: hidden;
-  //border-radius: 0.4rem;
+  border-radius: 0.3rem;
+  border: 0.5px solid $colorTheme_green;
 
   & img {
     object-fit: cover;
@@ -135,89 +106,78 @@
   }
 }
 
-// @keyframes typing {
-//   0%,
-//   100% {
-//     width: 0%;
+//! color Corner :
+
+// #green .corner {
+//   &__TopLeft::before {
+//     background: $colorTheme_green;
 //   }
-//   40%,
-//   60% {
-//     width: 100%;
+//   &__TopLeft::after {
+//     background: $colorTheme_green;
+//   }
+//   &__BottomRight::before {
+//     background: $colorTheme_green;
+//   }
+//   &__BottomRight::after {
+//     background: $colorTheme_green;
 //   }
 // }
-
-//color Corner :
-
-#green .corner {
-  &__TopLeft::before {
-    background: $colorTheme_green;
-  }
-  &__TopLeft::after {
-    background: $colorTheme_green;
-  }
-  &__BottomRight::before {
-    background: $colorTheme_green;
-  }
-  &__BottomRight::after {
-    background: $colorTheme_green;
-  }
-}
-#yellow .corner {
-  &__TopLeft::before {
-    background: $colorTheme_yellow;
-  }
-  &__TopLeft::after {
-    background: $colorTheme_yellow;
-  }
-  &__BottomRight::before {
-    background: $colorTheme_yellow;
-  }
-  &__BottomRight::after {
-    background: $colorTheme_yellow;
-  }
-}
-#purple .corner {
-  &__TopLeft::before {
-    background: $colorTheme_purple;
-  }
-  &__TopLeft::after {
-    background: $colorTheme_purple;
-  }
-  &__BottomRight::before {
-    background: $colorTheme_purple;
-  }
-  &__BottomRight::after {
-    background: $colorTheme_purple;
-  }
-}
-#blue .corner {
-  &__TopLeft::before {
-    background: $colorTheme_blue;
-  }
-  &__TopLeft::after {
-    background: $colorTheme_blue;
-  }
-  &__BottomRight::before {
-    background: $colorTheme_blue;
-  }
-  &__BottomRight::after {
-    background: $colorTheme_blue;
-  }
-}
-#red .corner {
-  &__TopLeft::before {
-    background: $colorTheme_red;
-  }
-  &__TopLeft::after {
-    background: $colorTheme_red;
-  }
-  &__BottomRight::before {
-    background: $colorTheme_red;
-  }
-  &__BottomRight::after {
-    background: $colorTheme_red;
-  }
-}
+// #yellow .corner {
+//   &__TopLeft::before {
+//     background: $colorTheme_yellow;
+//   }
+//   &__TopLeft::after {
+//     background: $colorTheme_yellow;
+//   }
+//   &__BottomRight::before {
+//     background: $colorTheme_yellow;
+//   }
+//   &__BottomRight::after {
+//     background: $colorTheme_yellow;
+//   }
+// }
+// #purple .corner {
+//   &__TopLeft::before {
+//     background: $colorTheme_purple;
+//   }
+//   &__TopLeft::after {
+//     background: $colorTheme_purple;
+//   }
+//   &__BottomRight::before {
+//     background: $colorTheme_purple;
+//   }
+//   &__BottomRight::after {
+//     background: $colorTheme_purple;
+//   }
+// }
+// #blue .corner {
+//   &__TopLeft::before {
+//     background: $colorTheme_blue;
+//   }
+//   &__TopLeft::after {
+//     background: $colorTheme_blue;
+//   }
+//   &__BottomRight::before {
+//     background: $colorTheme_blue;
+//   }
+//   &__BottomRight::after {
+//     background: $colorTheme_blue;
+//   }
+// }
+// #red .corner {
+//   &__TopLeft::before {
+//     background: $colorTheme_red;
+//   }
+//   &__TopLeft::after {
+//     background: $colorTheme_red;
+//   }
+//   &__BottomRight::before {
+//     background: $colorTheme_red;
+//   }
+//   &__BottomRight::after {
+//     background: $colorTheme_red;
+//   }
+// }
 
 //* for tablet :
 @media (min-width: 600px) {
