--- a/src/style/settings/_fonts.scss
+++ b/src/style/settings/_fonts.scss
@@ -29,7 +29,7 @@
   }
   &__basicText {
     font-size: clamp(0.9rem, 11px + 0.3vw, 2rem);
-    font-weight: 200;
+    font-weight: 300;
     letter-spacing: 0.3px;
     line-height: calc(1rem + 0.8vw);
   }
@@ -38,6 +38,11 @@
     font-weight: 500;
     letter-spacing: 0.3px;
     line-height: calc(1rem + 0.8vw);
+  }
+  &__input {
+    font-size: clamp(1rem, 11px + 0.3vw, 1.5rem);
+    font-weight: 700;
+    letter-spacing: 0.8px;
   }
   &__pageTitle {
     font-size: clamp(1.2rem, 16px + 1vw, 2.4rem);
