--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
 @import "./style/layout/gridManager";
 @import "./style/layout/animatedBackground";
 @import "./style/components/buttons";
+@import "./style/components/rollingIcon";
 @import "./style/components/contactForm";
 @import "./style/pages/sections/sectionTitle";
 @import "./style/pages/sections/sectionIntro";
