--- a/src/style/settings/_settings.scss
+++ b/src/style/settings/_settings.scss
@@ -3,15 +3,16 @@
 }
 .params {
   position: fixed;
-  width: 40px;
-  height: 150px;
+  width: 50%;
+  height: 350px;
   bottom: 0px;
   right: 0px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-end;
-  background: white;
+  background: transparent;
+  border: 1px solid red;
   border-bottom-left-radius: 1rem;
   border-top-left-radius: 1rem;
   z-index: 99;
@@ -103,6 +104,7 @@
 }
 
 .blockDots {
+  display: none;
   position: relative;
   width: auto;
   height: auto;
