--- a/src/style/settings/_color.scss
+++ b/src/style/settings/_color.scss
@@ -133,22 +133,22 @@ $colorTheme_green: #6dff65;
   }
 }
 
-#red #activePage {
-  border-bottom: 3px solid $colorTheme_red;
-}
+// #red #activePage {
+//   border-bottom: 3px solid $colorTheme_red;
+// }
 
-#blue #activePage {
-  border-bottom: 3px solid $colorTheme_blue;
-}
+// #blue #activePage {
+//   border-bottom: 3px solid $colorTheme_blue;
+// }
 
-#yellow #activePage {
-  border-bottom: 3px solid $colorTheme_yellow;
-}
+// #yellow #activePage {
+//   border-bottom: 3px solid $colorTheme_yellow;
+// }
 
-#purple #activePage {
-  border-bottom: 3px solid $colorTheme_purple;
-}
+// #purple #activePage {
+//   border-bottom: 3px solid $colorTheme_purple;
+// }
 
-#green #activePage {
-  border-bottom: 3px solid $colorTheme_green;
-}
+// #green #activePage {
+//   border-bottom: 3px solid $colorTheme_green;
+// }
