--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -28,7 +28,7 @@
       width: auto;
       min-width: 150px;
       height: auto;
-      padding: 2rem;
+      padding: 15rem 2rem 2rem 2rem;
       position: relative;
       //margin-top: 2rem;
     }
@@ -48,14 +48,57 @@
   &__TopLeft {
     bottom: 15px;
     left: -30px;
-    box-shadow: 0 0 12px 0 $colorTheme_green;
-    border: 4px solid $colorTheme_green;
     opacity: 0.5;
   }
   &__BottomRight {
     bottom: -20px;
     left: 10px;
+  }
+}
+
+#green .corner {
+  &__TopLeft {
+    box-shadow: 0 0 12px 0 $colorTheme_green;
+    border: 4px solid $colorTheme_green;
+  }
+  &__BottomRight {
     border: 2.5px solid $colorTheme_green;
+  }
+}
+#blue .corner {
+  &__TopLeft {
+    box-shadow: 0 0 12px 0 $colorTheme_blue;
+    border: 4px solid $colorTheme_blue;
+  }
+  &__BottomRight {
+    border: 2.5px solid $colorTheme_blue;
+  }
+}
+#red .corner {
+  &__TopLeft {
+    box-shadow: 0 0 12px 0 $colorTheme_red;
+    border: 4px solid $colorTheme_red;
+  }
+  &__BottomRight {
+    border: 2.5px solid $colorTheme_red;
+  }
+}
+#yellow .corner {
+  &__TopLeft {
+    box-shadow: 0 0 12px 0 $colorTheme_yellow;
+    border: 4px solid $colorTheme_yellow;
+  }
+  &__BottomRight {
+    border: 2.5px solid $colorTheme_yellow;
+  }
+}
+#purple .corner {
+  &__TopLeft {
+    box-shadow: 0 0 12px 0 $colorTheme_purple;
+    border: 4px solid $colorTheme_purple;
+  }
+  &__BottomRight {
+    border: 2.5px solid $colorTheme_purple;
   }
 }
 
@@ -67,13 +110,29 @@
   height: 230px;
   overflow: hidden;
   border-radius: 0.3rem;
-  border: 0.5px solid $colorTheme_green;
 
   & img {
     object-fit: cover;
     transform: translateY(-20px);
   }
 }
+
+#green .picture__container {
+  border: 0.5px solid $colorTheme_green;
+}
+#purple .picture__container {
+  border: 0.5px solid $colorTheme_purple;
+}
+#yellow .picture__container {
+  border: 0.5px solid $colorTheme_yellow;
+}
+#blue .picture__container {
+  border: 0.5px solid $colorTheme_blue;
+}
+#red .picture__container {
+  border: 0.5px solid $colorTheme_red;
+}
+
 .writingAnimation {
   display: flex;
   white-space: nowrap;
@@ -106,83 +165,10 @@
   }
 }
 
-//! color Corner :
-
-// #green .corner {
-//   &__TopLeft::before {
-//     background: $colorTheme_green;
-//   }
-//   &__TopLeft::after {
-//     background: $colorTheme_green;
-//   }
-//   &__BottomRight::before {
-//     background: $colorTheme_green;
-//   }
-//   &__BottomRight::after {
-//     background: $colorTheme_green;
-//   }
-// }
-// #yellow .corner {
-//   &__TopLeft::before {
-//     background: $colorTheme_yellow;
-//   }
-//   &__TopLeft::after {
-//     background: $colorTheme_yellow;
-//   }
-//   &__BottomRight::before {
-//     background: $colorTheme_yellow;
-//   }
-//   &__BottomRight::after {
-//     background: $colorTheme_yellow;
-//   }
-// }
-// #purple .corner {
-//   &__TopLeft::before {
-//     background: $colorTheme_purple;
-//   }
-//   &__TopLeft::after {
-//     background: $colorTheme_purple;
-//   }
-//   &__BottomRight::before {
-//     background: $colorTheme_purple;
-//   }
-//   &__BottomRight::after {
-//     background: $colorTheme_purple;
-//   }
-// }
-// #blue .corner {
-//   &__TopLeft::before {
-//     background: $colorTheme_blue;
-//   }
-//   &__TopLeft::after {
-//     background: $colorTheme_blue;
-//   }
-//   &__BottomRight::before {
-//     background: $colorTheme_blue;
-//   }
-//   &__BottomRight::after {
-//     background: $colorTheme_blue;
-//   }
-// }
-// #red .corner {
-//   &__TopLeft::before {
-//     background: $colorTheme_red;
-//   }
-//   &__TopLeft::after {
-//     background: $colorTheme_red;
-//   }
-//   &__BottomRight::before {
-//     background: $colorTheme_red;
-//   }
-//   &__BottomRight::after {
-//     background: $colorTheme_red;
-//   }
-// }
-
 //* for tablet :
 @media (min-width: 600px) {
   .home {
-    margin-left: 15vw;
+    // margin-left: 15vw;
     &__section {
       padding: 5vh 5vw;
       &__article {
